fixed alignment of collapsed menu

--- a/src/components/nav/NavBar.scss
+++ b/src/components/nav/NavBar.scss
@@ -42,6 +42,7 @@
     }
     .nav-link {
         color: white;
+        text-align: center;
     }
     .cAccent {
       color: $yellow;
